# api-rust-axum

./: .env  .env.example  Cargo.toml  Dockerfile  docker-compose-dev.yml  docker-compose.yml
db/: v0001__create_people.sql
src/: controlles.rs  main.rs  model.rs  repository.rs
